Fix Footer Width on mobile #1237

--- a/site/css/ocamlorg.css
+++ b/site/css/ocamlorg.css
@@ -485,6 +485,10 @@ ul.translations:after { content: "]"; }
   margin-right: 1em; /* To visually "compensate" for left alignment */
 }
 @media (max-width: 767px) {
+  #footer {
+    margin-left: -20px;
+    margin-right: -20px;
+  }
   #footer .column {
     text-align: left;
     padding-left: 10%;
